--- a/html/review_sample.html
+++ b/html/review_sample.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 <body>
-    <div class="">
-        <div class="">
-            <img src="/img/review/thap-ba-ponagar-2-768x768.jpg" style="width: 100%;" alt="">
-        <h2 style="text-align: center; color: turquoise;">Tháp bà Ponaga</h2>
+    <div class="container-reviewofcustomer">
+        <div class="container-reviewofcustomer__content">
+            <img src="/img/review/thap-ba-ponagar-2-768x768.jpg" alt="">
+        <h2>Tháp bà Ponaga</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestiae similique voluptate doloremque enim voluptatem, maiores nam? Praesentium, ratione! Voluptatum laboriosam laudantium in vero nisi fugit maxime sint iste aliquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci sit ipsam impedit ad? Eos, repudiandae reiciendis. Tempora veritatis nobis dolorum consectetur molestias, veniam accusantium sit beatae, repellat facilis, fugiat blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente commodi debitis quaerat error nam distinctio in praesentium. Repellendus, pariatur. Voluptatibus autem libero modi ut. Vel mollitia ipsam quia quos molestiae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium maiores, accusamus consequatur quod tenetur animi quia totam nihil repellendus voluptatum alias quos cupiditate ut libero ab! Recusandae, dolorem laborum! Fugiat!</p>
         <div class="content__date--cusreview"><p>November, 21, 2021</p> </div>
         </div>
-        <h3>người đăng bài</h3>
+        <h3>Người đăng bài</h3>
         <div class=" content--infor-cusreiew flexrow">
 
             <div><img src="/img/user-img-1-100x100.png" alt=""></div>
